k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
  namespace: app
  labels: { app: demo-web }
spec:
  replicas: 2
  selector:
    matchLabels: { app: demo-web }
  template:
    metadata:
      labels: { app: demo-web }
    spec:
      containers:
      - name: demo-web
        image: 154980000474.dkr.ecr.ap-south-1.amazonaws.com/demo-web:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet: { path: "/", port: 8080 }
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/", port: 8080 }
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
